# sae-circuits

./: .gitattributes  LICENSE  README.md  pyproject.toml  requirements.txt
data/: data_utils.py  ds.py  gt.py  ioi.py  make_datasets.sh
data/ds/: all_tokens.pt  ground_truth.pt  labels_heads_mean.pt  resid_streams.pt
data/gt/: all_tokens.pt  labels_heads_mean.pt  logit_indices.pt  prompts_heads_mean.pt  resid_heads_mean.pt
data/ioi/: all_tokens.pt  ground_truth.pt  labels.pt  resid_streams.pt
experiments/: main_results.py  num_sae_examples.py
experiments/results/: main_results.json  main_results_node.json
models/gt/: sparse_autoencoder.pt
models/ioi/: sparse_autoencoder.pt  sparse_autoencoder_node.pt
output/: sparse_autoencoder_results.json
output/data/: roc_results_num_codes_ds.json  roc_results_num_codes_gt.json  roc_results_num_codes_ioi.json  roc_results_num_codes_node.json
output/ds/: fpr_tpr.npy  optuna_study.pkl
output/gt/: fpr_tpr.npy  optuna_study.pkl
output/induction/: edge_faithfulness_all_models.json  node_faithfulness_all_models.json
output/ioi/: fpr_tpr.npy  optuna_study.pkl  sparse_autoencoder_optuna_study.pkl
src/: autoencoder_interp.py  autoencoder_tune.py  circuit_drawing.ipynb  cnns.ipynb  common_utils.py  config.yaml  datasets.ipynb  edge.py  edge_discovery.ipynb  faithfulness.ipynb  gendered_pronouns.ipynb  generate_datasets.py  interpretability.py  main.py  model.py  model_sizes.py  negative_examples.py  node.py  num_codes.py  num_examples.ipynb  pile.py  sae.py  tracr.ipynb  tracr_sampler.ipynb  train.py  train_cnn.py
(+27 files in other folders)
